--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@parse/react-native": "^0.0.1-alpha.18",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.4",
+    "cheerio": "^1.0.0-rc.12",
     "expo": "~48.0.5",
     "expo-status-bar": "~1.4.4",
     "parse": "^4.0.1",
@@ -23,7 +26,11 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-navigation": "^4.4.4"
+    "react-native-table-component": "^1.2.2",
+    "react-navigation": "^4.4.4",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
